--- a/app/views/stopwatch_timers/_edit.html.erb
+++ b/app/views/stopwatch_timers/_edit.html.erb
@@ -1,11 +1,14 @@
-<h3 class="title"><%= l(:label_spent_time) %></h3>
+<h3 class="title"><%= l(:button_log_time) %> - <%= format_date User.current.today %></h3>
 
-<%= labelled_form_for @time_entry, url: stopwatch_path, remote: true do |f| %>
-  <% @time_entry.hours ||= 0 %>
-  <%= render partial: 'timelog/form', locals: { f: f } %>
+<%= render partial: 'entries_list', locals: { entries: @entries } %>
+
+<%= labelled_form_for @time_entry, url: stopwatch_timer_path(@time_entry), method: :put, remote: true do |f| %>
+  <%= hidden_field_tag :time_entry_id, @time_entry.id %>
+  <%= render partial: 'entry_form', locals: { f: f } %>
 
   <p class="buttons">
-    <%= submit_tag l(:button_create) %>
-    <%= submit_tag l(:button_cancel), name: nil, onclick: "hideModal(this);", type: 'button' %>
+    <%= submit_tag l(:button_save) %>
+    <%= submit_tag t('.button_save_and_continue'), name: 'continue' %>
+    <%#= submit_tag l(:button_cancel), name: nil, onclick: "hideModal(this);", type: 'button' %>
   </p>
 <% end %>
