--- a/app/views/stopwatch_timers/start.js.erb
+++ b/app/views/stopwatch_timers/start.js.erb
@@ -5,5 +5,11 @@
   $('#ajax-modal').html('<%= j render partial: 'new' %>');
   showModal('ajax-modal', '700px');
 <% end %>
-Stopwatch.highlightTimer('<%= @started_time_entry.id if @started_time_entry %>');
+
+<% if @started_time_entry %>
+    window.stopwatch.timerStarted('<%= @started_time_entry.id %>',
+                                  '<%= j format_hours @started_time_entry.hours %>');
+<% else %>
+    window.stopwatch.timerStopped();
+<% end %>
 
