updating entries from overlay

--- a/app/views/stopwatch_timers/update.js.erb
+++ b/app/views/stopwatch_timers/update.js.erb
@@ -1,5 +1,9 @@
-hideModal();
+<% if @success %>
+  hideModal();
+<% else %>
+  $('#ajax-modal').html('<%= j render partial: 'stopwatch_timers/edit' %>');
+<% end %>
 <% if params[:continue] %>
   $('#ajax-modal').html('<%= j render partial: 'stopwatch_timers/new' %>');
-  showModal('ajax-modal', '600px');
+  showModal('ajax-modal', '700px');
 <% end %>
