--- a/app/views/stopwatch/hooks/_time_entries_context_menu_start.html.erb
+++ b/app/views/stopwatch/hooks/_time_entries_context_menu_start.html.erb
@@ -2,9 +2,9 @@
   <% time_entry = @time_entries.first %>
   <li>
     <% if User.current.is_running_timer? time_entry %>
-      <%= context_menu_link l(:label_stopwatch_stop), stop_stopwatch_timer_path(time_entry, context: '1'), class: 'icon-time', remote: true, method: :put %>
+      <%= context_menu_link l(:label_stopwatch_stop), stop_stopwatch_timer_path(time_entry, context: '1'), class: 'icon icon-time', remote: true, method: :put %>
     <% else %>
-      <%= context_menu_link l(:label_stopwatch_start), start_stopwatch_timer_path(time_entry, context: '1'), class: 'icon-time', remote: true, method: :put %>
+      <%= context_menu_link l(:label_stopwatch_start), start_stopwatch_timer_path(time_entry, context: '1'), class: 'icon icon-time', remote: true, method: :put %>
     <% end %>
   </li>
 <% end %>
