--- a/app/views/stopwatch_timers/_entry_form.html.erb
+++ b/app/views/stopwatch_timers/_entry_form.html.erb
@@ -4,8 +4,12 @@
   <legend><%= t @time_entry.new_record? ? '.legend_new' : '.legend_edit' %></legend>
 
   <p><label for="stopwatch_time_entry_project_id"><%= l :field_project %><span class="required"> *</span></label><%= f.select :project_id, project_tree_options_for_select(Project.allowed_to(:log_time).to_a, :selected => @time_entry.project, :include_blank => true), { no_label: true }, id: 'stopwatch_time_entry_project_id' %></p>
-  <p>
-    <%= f.text_field :issue_id, :size => 6, :required => Setting.timelog_required_fields.include?('issue_id') %>
+  <p><label for="stopwatch_time_entry_issue_id"><%= l :field_issue %>
+  <% if Setting.timelog_required_fields.include?('issue_id') %>
+    <span class="required"> *</span>
+  <% end %>
+  </label>
+    <%= f.text_field :issue_id, :size => 6, no_label: true, id: 'stopwatch_time_entry_issue_id' %>
     <span id="stopwatch_time_entry_issue">
       <%=  link_to_issue(@time_entry.issue) if @time_entry.issue.try(:visible?) %>
     </span>
@@ -24,10 +28,10 @@
 
 <%= javascript_tag do %>
   $(document).ready(function(){
-    $('#time_entry_project_id').change(function(){
-      $('#time_entry_issue_id').val('');
+    $('#stopwatch_time_entry_project_id').change(function(){
+      $('#stopwatch_time_entry_issue_id').val('');
     });
-    $('#time_entry_project_id, #time_entry_issue_id').change(function(){
+    $('#stopwatch_time_entry_project_id, #stopwatch_time_entry_issue_id').change(function(){
       $.ajax({
         url: '<%= j update_form_stopwatch_timers_path(time_entry_id: @time_entry.id, format: 'js') %>',
         type: 'post',
@@ -36,7 +40,7 @@
     });
   });
 
-  observeAutocompleteField('time_entry_issue_id',
+  observeAutocompleteField('stopwatch_time_entry_issue_id',
     function(request, callback) {
       var url = '<%= j auto_complete_issues_path %>';
       var data = {
@@ -46,7 +50,7 @@
       <% if @time_entry.new_record? && @project %>
       project_id = '<%= @project.id %>';
       <% else %>
-      project_id = $('#time_entry_project_id').val();
+      project_id = $('#stopwatch_time_entry_project_id').val();
       <% end %>
       if(project_id){
         data['project_id'] = project_id;
@@ -64,8 +68,8 @@
     },
     {
       select: function(event, ui) {
-        $('#time_entry_issue').text('');
-        $('#time_entry_issue_id').val(ui.item.value).change();
+        $('#stopwatch_time_entry_issue').text('');
+        $('#stopwatch_time_entry_issue_id').val(ui.item.value).change();
       }
     }
   );
