--- a/app/views/stopwatch_timers/create.js.erb
+++ b/app/views/stopwatch_timers/create.js.erb
@@ -1,4 +1,5 @@
 hideModal();
-window.stopwatch.highlightRunningTimer(
+window.stopwatch.timerStarted(
   <%= raw Stopwatch::Timer.new(User.current).to_json %>
 );
+
