start/stop tracking: issue context menu entry

--- a/app/views/stopwatch_issue_timers/start.js.erb
+++ b/app/views/stopwatch_issue_timers/start.js.erb
@@ -1,4 +1,5 @@
 <% if @started_time_entry %>
+  contextMenuHide();
   window.stopwatch.timerStarted(
     <%= raw Stopwatch::Timer.new(User.current).to_json %>
   );
