adds project_id arg to 'log time' link to preselect the current project, if any.

--- a/app/views/stopwatch/hooks/_layouts_base_body_bottom.html.erb
+++ b/app/views/stopwatch/hooks/_layouts_base_body_bottom.html.erb
@@ -6,6 +6,7 @@
   <% if User.current.logged? %>
     window.stopwatch.highlightRunningTimer(
       <%= raw Stopwatch::Timer.new(User.current).to_json %>
-    )
+    );
+    window.stopwatch.setProjectId('<%= j @project&.id.to_s %>');
   <% end %>
 <% end %>
