--- a/app/views/stopwatch_issue_timers/stop.js.erb
+++ b/app/views/stopwatch_issue_timers/stop.js.erb
@@ -1,6 +1,6 @@
 contextMenuHide();
 window.stopwatch.updateStartStopLink(
   '#stopwatch_stop_timer_<%= @issue.id %>',
-  '<%= j Stopwatch::IssueLinks.new(@issue).start_timer %>'
+  '<%= j Stopwatch::IssueLinks.new(@issue, self).start_timer %>'
 );
 window.stopwatch.timerStopped();
